Modify ping Facebook command to be non-fatal
Add '|| true' to ping Facebook command to prevent failure.

--- a/.github/workflows/learn_CICD.yaml
+++ b/.github/workflows/learn_CICD.yaml
@@ -25,7 +25,7 @@ jobs:
              run: ping -c 4 google.com || true
              
            - name: ping Facebook
-             run: ping -c 4 facebook.com
+             run: ping -c 4 facebook.com || true
            
                
          
