--- a/.github/workflows/learn_CICD.yaml
+++ b/.github/workflows/learn_CICD.yaml
@@ -19,6 +19,7 @@ jobs:
              run: git version
     
     PingApps:
+         needs: getgitversion
          runs-on: ubuntu-24.04 
          steps:
            - name: Ping Google
