Change trigger to workflow_dispatch for learn_CICD

--- a/.github/workflows/learn_CICD.yaml
+++ b/.github/workflows/learn_CICD.yaml
@@ -1,10 +1,8 @@
 
 name: TestApp
 
-on:
-  push:
-    branches:
-      - main
+on: workflow_dispatch
+
 jobs:
     getgitversion:
          runs-on: ubuntu-24.04 
