--- a/.github/workflows/learn_CICD2.yml
+++ b/.github/workflows/learn_CICD2.yml
@@ -28,7 +28,7 @@ jobs:
             ssh-keyscan github.com >> ~/.ssh/known_hosts
             rm -rf Actions-Git
             git clone git@github.com:cloudlumanex/Actions-Git.git
-            sudo cp -r /home/$(( secrets.USERNAME ))/Actions-Git/* /var/www/html
+            sudo cp -r /home/${{ secrets.USERNAME }}/Actions-Git/* /var/www/html
           EOF
 
       
